--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ charset-normalizer==3.1.0
 click==8.1.3
 html5lib==1.1
 idna==3.4
+igraph==0.10.4
 importlib-metadata==6.0.0
+lxml==4.9.2
 mypy-extensions==1.0.0
 numpy==1.24.2
 packaging==23.0
@@ -14,10 +16,12 @@ pandas==1.5.3
 pathspec==0.11.1
 platformdirs==3.1.1
 python-dateutil==2.8.2
+python-igraph==0.10.4
 pytz==2022.7.1
 requests==2.28.2
 six==1.16.0
 soupsieve==2.4
+texttable==1.6.7
 tomli==2.0.1
 typed-ast==1.5.4
 typing_extensions==4.5.0
